# esoterics

./: .gitignore  CMakeLists.txt  test.bf
include/brainfuck/: Brainfuck.h  Memory.h  Translator.h
include/common/: Error.h  File.h
src/: main.cpp
src/brainfuck/: Brainfuck.cpp  Memory.cpp  Translator.cpp
src/chicken/: Chicken.cpp  Chicken.h
src/common/: File.cpp
tests/brainfuck/: Brainfuck_Test.cpp  Memory_Test.cpp
tests/common/: File_Test.cpp
